# miniaudio_dart

./: .gitignore  .gitmodules  Makefile  README.md  release.py  update_pubspecs.py
miniaudio_dart/: .flutter-plugins-dependencies  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
miniaudio_dart/example/: .metadata  README.md  pubspec.yaml
miniaudio_dart/example/lib/: example_general.dart  example_opus.dart  main.dart
miniaudio_dart/example/linux/flutter/: generated_plugins.cmake
miniaudio_dart/example/test/: opus_race_test.dart
miniaudio_dart/example/web/: index.html
miniaudio_dart/example/windows/flutter/: generated_plugins.cmake
miniaudio_dart/lib/: miniaudio_dart.dart  miniaudio_flutter.dart
miniaudio_dart/lib/test/: minisound_mock.dart
miniaudio_dart/test/: crosscoder_test.dart  miniaudio_dart_test.dart  minisound_test.dart  recorder_codec_test.dart  voip_scenario_test.dart
miniaudio_dart_ffi/: CHANGELOG.md  README.md  pubspec.yaml
miniaudio_dart_ffi/android/: build.gradle  settings.gradle
miniaudio_dart_ffi/android/src/main/: AndroidManifest.xml
miniaudio_dart_ffi/hook/: build.dart
miniaudio_dart_ffi/ios/: miniaudio_dart_ffi.podspec
miniaudio_dart_ffi/lib/: miniaudio_dart_ffi.dart  miniaudio_dart_ffi_bindings.dart
miniaudio_dart_ffi/linux/: CMakeLists.txt
miniaudio_dart_ffi/macos/: miniaudio_dart_ffi.podspec
miniaudio_dart_ffi/macos/Classes/: miniaudio_dart_ffi.c
miniaudio_dart_ffi/src/: CMakeLists.txt  modify_js.cmake  modify_js.cmake.in
miniaudio_dart_ffi/src/cmake/: opus.cmake
miniaudio_dart_ffi/src/include/: codec.h  codec_inline_encoder.h  codec_opus_diag.h  codec_packet_format.h  codec_packet_queue.h  codec_runtime.h  crosscoder.h  engine.h  generator.h  miniaudio_dart.h  record.h  silence_data_source.h  sound.h  stream_player.h
miniaudio_dart_ffi/src/src/: codec_inline_encoder.c  codec_opus.c  codec_packet_queue.c  codec_pcm.c  codec_runtime.c  crosscoder.c  engine.c  record.c  silence_data_source.c  sound.c  stream_player.c
miniaudio_dart_ffi/src/tests/: test_inline_encoder_detach_race.c  test_inline_encoder_stress.c
miniaudio_dart_ffi/windows/: CMakeLists.txt
miniaudio_dart_platform_interface/: CHANGELOG.md  README.md  pubspec.yaml
miniaudio_dart_platform_interface/lib/: miniaudio_dart_platform_interface.dart
miniaudio_dart_platform_interface/lib/platform_stub/: miniaudio_platform_ffi.dart  miniaudio_platform_stub.dart  miniaudio_platform_web.dart
miniaudio_dart_web/: CHANGELOG.md  README.md  pubspec.yaml
miniaudio_dart_web/lib/: miniaudio_dart_web.dart
miniaudio_dart_web/lib/bindings/: memory_web.dart  miniaudio_dart.dart
miniaudio_dart_web/lib/bindings/wasm/: wasm.dart
